# Facial_Recognition

./: .gitignore  README.md  download_weights.sh  pyproject.toml
data/: distances.json
dataset/sign_in/: annotations.json
dataset/sign_up/: annotations.json
scripts/: requirements.txt  train_autoencoder.py
src/: __init__.py  main.py  test_env.py
src/api/: register.py  verify.py
src/database/: face_repository.py  storage_repository.py
src/engine/: ArcFace.py  RetinaFace.py  YOLOv8face.py  anomaly_detector.py  arcface_embedder.py  autoencoder.py  hdbscan.py  umap_reducer.py
src/pipelines/: hybrid_pipeline.py  hybrid_pipelines.py  identify_face_pipeline.py  register_face_pipeline.py  standard_pipeline.py
src/scripts/: build_augmented_dataset.py  capture_faces.py  crop_my_frames.py
src/test/: test_calibrate_threshold.py  test_generate_distances.py  test_insert_arcface_embedding.py  test_login_face_flow.py  test_pipeline_orchestration_unit.py  test_pipelines.py  test_register_face_flow.py  test_supabase_connection.py
src/utils/: args.py  calibrate_threshold.py  capture_frame.py  constants.py  debug_prints.py  generate_distances.py  logger.py  normalizer.py  supabase_client.py
training/: augment_and_register_cropped.py  hdbscan_training.py  train_cropped_dataset_with_augmentation.py  umap_training.py
weights/: autoencoder.pt  hdbscan_faces.joblib  umap_faces.joblib
