[project]
name = "facial-recognition"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "fastapi>=0.136.3",
    "numpy>=2.4.6",
    "opencv-python>=4.13.0.92",
    "python-multipart>=0.0.32",
    "ultralytics>=8.4.61",
    "uvicorn>=0.49.0",
]
