[project]
name = "facial-recognition"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12,<3.14"
dependencies = [
    "deepface>=0.0.93",
    "insightface>=1.0.1",
    "joblib>=1.4.2",
    "numpy>=2.4.6",
    "onnxruntime>=1.26.0",
    "opencv-python>=4.13.0.92",
    "python-dotenv>=1.2.2",
    "supabase>=2.31.0",
    "tensorflow>=2.21.0",
    "tf-keras>=2.21.0",
    "torch>=2.12.0",
    "umap-learn>=0.5.7",
    "ultralytics>=8.4.61",
]
